--- a/README.textile
+++ b/README.textile
@@ -64,9 +64,9 @@ To create a new LDAP river:
 *attributes* and *fields* options are both array of strings. While the first is used to retrieve object attributes from the LDAP, the second will be used to rename the attributes and index them under a given field name.
 
 In this example, the documents will be indexed as "person" document in the index "server0":
-	- the value of the LDAP attribute "sn" will be indexed as the document's id 
-	- the value of the LDAP attribute "cn" will be indexed in a field called "name"
-	- the values of the LDAP attribute "memberOf" will be indexed in a field called "groups"
+* the value of the LDAP attribute "sn" will be indexed as the document's id 
+* the value of the LDAP attribute "cn" will be indexed in a field called "name"
+* the values of the LDAP attribute "memberOf" will be indexed in a field called "groups"
 
 The following options can be configured:
 
@@ -79,10 +79,10 @@ The following options can be configured:
 |   baseDn	| _string_     	|     Base DN used to search for objects						|
 |   filter	| _string_     	|     LDAP search filter used to search objects						|
 |   scope	| _string_     	|     Scope of the search filter, can be *onelevel*, *object* or *subtree* (default)	|
-|   attributes	| array of _string_ |    LDAP attributes names to retrieve						|
-|   fields	| array of _string_ |    Field names of the previous LDAP attributes. This array must have the same size as *attributes* array. *_id* field can be used to configure the document's id.|
+|   attributes	| _array of string_ |    LDAP attributes names to retrieve						|
+|   fields	| _array of string_ |    Field names of the previous LDAP attributes. This array must have the same size as *attributes* array. *_id* field can be used to configure the document's id.|
 |   index	| _string_     	|     Index name where the documents will be indexed |
 |   type	| _string_     	|     Type name of the documents |
 
 
-Thanks to Jörg Prante for the boilerplate code that comes from the nice "JDBC River Plugin":https://github.com/jprante/elasticsearch-river-jdbc.
+Thanks to Jörg Prante for the boilerplate code that comes from the nice "JDBC River Plugin":https://github.com/jprante/elasticsearch-river-jdbc :o)
